Correções de erro, implementação do front-ed página de pedidos

--- a/frontend/src/app/pedido/pedido.component.html
+++ b/frontend/src/app/pedido/pedido.component.html
@@ -30,5 +30,5 @@
     Limpar
   </button>
   <span class="flex-1"></span>
-  <button mat-raised-button color="accent">Concluir</button>
+  <button mat-raised-button color="accent" (click)="pedidoService.realizaPedido()">Concluir</button>
 </mat-toolbar>
